--- a/src/fonts/BlairMd.css
+++ b/src/fonts/BlairMd.css
@@ -8,8 +8,8 @@
 
 @font-face {
     font-family: 'blair_itclight';
-    src: url('blairitc-light-webfont.woff2') format('woff2'),
-         url('blairitc-light-webfont.woff') format('woff');
+    src: url('blair-itc-light-webfont.woff2') format('woff2'),
+         url('blair-itc-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
