--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -138,3 +138,13 @@ body::-webkit-scrollbar-track-piece
   opacity: 1;
   transition: opacity 250ms ease-in;
 }
+
+.artist-popup {
+    max-height: 65%;
+}
+
+@media only screen and (max-width: 800px) {
+    .artist-popup {
+        max-height: 100%;
+    }
+}
