--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -107,6 +107,16 @@ body::-webkit-scrollbar-track-piece
   filter: grayscale(0%);
 }
 
+.taller-container {
+  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0%);
+}
+
+.taller-container.hover{
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
+
 .artista.hover {
   opacity: 1.0;
   transition: opacity 500ms ease-in;
@@ -140,7 +150,7 @@ body::-webkit-scrollbar-track-piece
 }
 
 .artist-popup {
-    max-height: 65%;
+    max-height: 100%;
 }
 
 @media only screen and (max-width: 800px) {
