--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -126,6 +126,15 @@ body::-webkit-scrollbar-track-piece
   transition: opacity 500ms ease-in;
 }
 
+.taller-details {
+  opacity: 0.001;
+  transition: opacity 500ms ease-in;
+}
+
+.taller-details.hover {
+  opacity: 1.0;
+}
+
 .image-50 {
   width: 100%;
   height: auto;
